# better-search

./: Cargo.toml  Justfile  Makefile  README.md  Readme.md
src/: files.rs  main.rs  openers.rs  search.rs  ui.rs
