[package]
name = "Better-Search"
version = "1.0.0"
edition = "2021"

[dependencies]
gtk = "0.18.1"
gio = "0.18.1"
glib = "0.18.5"
gdk = "0.18.0"
gdk-pixbuf = "0.18.0"
pango = "0.18.0"
walkdir = "2.5.0"
mime_guess = "2.0.5"
configparser = "3.1.0"
libc = "0.2.174"
shell-escape = "0.1.5"
toml = "0.8"
dirs = "5"
shellexpand = "3"
